backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: backend-pv-storage
          persistentVolumeClaim:
            claimName: backend-pvc
      containers:
      - name: backend
        image: localhost/game

        resources:
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/etc/backend"
          name: backend-pv-storage

---

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-svc
            port: 
              number: 5000
