ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost-ingress
  annotations:
    # ssl certificate
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    # dns record
    # external-dns.alpha.kubernetes.io/hostname: thehuginn.com
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    
spec:
  rules:
  - host: game.thehuginn.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-svc
            port: 
              number: 5000
              
  - host: registry.thehuginn.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: registry-svc
            port: 
              number: 5000
              
  - host: ergo.thehuginn.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ergo-svc
            port: 
              number: 9053
          
  tls:
    - hosts:
        - thehuginn.com
        - registry.thehuginn.com
        - ergo.thehuginn.com
        - game.thehuginn.com
      secretName: thehuginn-com-tls
